--- a/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -1,30 +1,15 @@
 ---
 description: Pipeline for processing sample logs
 processors:
-  - rename:
-      field: user.id
-      target_field: UserID
-      ignore_missing: true
-  - rename:
-      field: user.username
-      target_field: UserName
-      ignore_missing: true
-  - rename:
-      field: audit.action_type
-      target_field: ActionType
-      ignore_missing: true
-  - rename:
-      field: audit.section
-      target_field: Section
-      ignore_missing: true 
-  - rename:
-      field: audit.ip_address
-      target_field: IPAddress
-      ignore_missing: true 
-  - rename:
-      field: audit.timestamp
-      target_field: CreateDate
-      ignore_missing: true                    
+  - set:
+      field: event.ingested
+      value: "{{{_ingest.timestamp}}}"
+      ignore_empty_value: true
+      ignore_failure: true
+on_failure:
   - append:
       field: error.message
-      value: '{{{ _ingest.on_failure_message }}}'
+      value: '{{{_ingest.on_failure_message}}}'
+  - set:
+      field: event.kind
+      value: pipeline_error
