--- a/packages/beyondtrust_password_safe/data_stream/useraudit/manifest.yml
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/manifest.yml
@@ -21,6 +21,13 @@ streams:
         show_user: true
         required: true
         default: 100
+      - name: offset
+        type: integer
+        title: Offset
+        description: Number of events to skipped per request
+        show_user: true
+        required: true
+        default: 100
       - name: tags
         type: text
         title: Tags
