--- a/packages/beyondtrust_password_safe/data_stream/useraudit/manifest.yml
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/manifest.yml
@@ -13,7 +13,7 @@ streams:
         description: Go Duration syntax (e.g., `10s`) for how often to fetch sign-in attempts
         show_user: false
         required: true
-        default: "10s"
+        default: "20m"
       - name: limit
         type: integer
         title: Limit
