--- a/packages/beyondtrust_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondtrust_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
@@ -85,6 +85,14 @@ processors:
       field: event.type
       value: info
 
+  - set:
+      field: event.dataset
+      value: beyond_insight_password_safe.session
+
+  - set:
+      field: event.module
+      value: beyond_insight_password_safe
+
   - rename:
       field: beyond_insight_password_safe.session.session_id
       target_field: event.id
