--- a/packages/beyondtrust_password_safe/data_stream/session/fields/base-fields.yml
+++ b/packages/beyondtrust_password_safe/data_stream/session/fields/base-fields.yml
@@ -10,3 +10,10 @@
 - name: '@timestamp'
   type: date
   description: Event timestamp.
+- name: input.type
+  type: keyword
+  description: Input type
+- name: event.dataset
+  type: constant_keyword
+- name: event.module
+  type: constant_keyword
