--- a/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -1,15 +1,121 @@
 ---
-description: Pipeline for processing sample logs
+description: Pipeline for processing UserAudits logs
 processors:
   - set:
       field: event.ingested
       value: "{{{_ingest.timestamp}}}"
       ignore_empty_value: true
       ignore_failure: true
+  - rename:
+      field: json
+      target_field: beyond_insight_password_safe.useraudit
+
+  - fingerprint:
+      fields:
+        - beyond_insight_password_safe.useraudit.AuditID
+      target_field: "_id"    
+#################### Event ECS fields ##########################
+
+  - set:
+      field: event.module
+      value: beyondtrust_password_safe
+  - set:
+      field: ecs.version
+      value: "8.11.0"
+  - set:
+      field: event.kind
+      value: event   
+  - set:
+      field: event.category
+      value: ['info','access']
+  - set:
+      field: event.dataset
+      value: beyondtrust_password_safe.useraudit
+  - set:
+      field: event.outcome
+      value: beyondtrust_password_safe.useraudit.section  
+  - set:
+      field: event.type
+      value: beyondtrust_password_safe.useraudit.action_type
+  - rename:
+      field: beyond_insight_password_safe.useraudit.audit_id
+      target_field: event.id
+      ignore_missing: true
+
+  - rename:
+      field: beyond_insight_password_safe.useraudit.user_id
+      target_field: user.id
+      ignore_missing: true
+
+  - date:
+      if: "ctx.beyond_insight_password_safe.useraudit?.create_date != null"
+      field: ctx.beyond_insight_password_safe.useraudit.create_date"
+      target_field: event.created_at
+      formats:
+      - UNIX_MS
+      ignore_failure: true
+
+
+#################### User AuditsLog fields ###############
+
+  - rename:
+      field: message
+      target_field: beyondtrust_password_safe.useraudit
+      ignore_missing: true
+  - rename:
+      field: beyondtrust_password_safe.useraudit.user_name
+      target_field: beyondtrust_password_safe.useraudit.user.name
+      ignore_missing: true
+  - rename:
+      field: beyondtrust_password_safe.useraudit.user_id
+      target_field: beyondtrust_password_safe.useraudit.user.id
+      ignore_missing: true
+
+############################### Handle failures #################
+
 on_failure:
   - append:
       field: error.message
-      value: '{{{_ingest.on_failure_message}}}'
+      value: >
+        Processor "{{{ _ingest.on_failure_processor_type }}}"
+        with tag "{{{ _ingest.on_failure_processor_tag }}}"
+        in pipeline "{{{ _ingest.on_failure_pipeline }}}"
+        failed with message "{{{ _ingest.on_failure_message }}}"
   - set:
       field: event.kind
       value: pipeline_error
+
+##################################################################
+
+
+##############
+#   OS src   #
+##############
+  - set:
+      if: "ctx.beyond_insight_password_safe?.useraudit?.event?.os_version != null"
+      field: os.version
+      copy_from: beyond_insight_password_safe.useraudit.event.os_version
+
+##############
+#   IP src   #
+##############
+  - set:
+      if: "ctx.beyond_insight_password_safe?.useraudit?.ip_address != null && ctx.beyond_insight_password_safe.useraudit.ip_address != ''"
+      field: host.ip
+      value: "{{{beyond_insight_password_safe.useraudit.ip_address}}}"
+      ignore_empty_value: true
+
+##############
+# ECS compat #
+##############
+  - set:
+      field: host.address
+      copy_from: host.ip
+      ignore_empty_value: true
+
+  - geoip:
+      if: "ctx.host?.ip != null && ctx.host.ip != ''"
+      field: host.ip
+      target_field: host.geo
+      ignore_missing: true
+ 
