--- a/packages/beyondtrust_password_safe/data_stream/session/manifest.yml
+++ b/packages/beyondtrust_password_safe/data_stream/session/manifest.yml
@@ -2,8 +2,8 @@ title: "Session"
 type: logs
 streams:
   - input: cel
-    title: Sample logs
-    description: Collect sample logs
+    title: Session Logs
+    description: Collect session logs
     enabled: true
     template_path: cel.yml.hbs
     vars:
@@ -13,7 +13,7 @@ streams:
         description: Go Duration syntax (e.g., `10s`) for how often to fetch sign-in attempts
         show_user: false
         required: true
-        default: "10s"
+        default: "60s"
       - name: limit
         type: integer
         title: Limit
