--- a/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -6,14 +6,12 @@ processors:
       value: "{{{_ingest.timestamp}}}"
       ignore_empty_value: true
       ignore_failure: true
-  - rename:
-      field: json
-      target_field: beyond_insight_password_safe.useraudit
 
-  - fingerprint:
-      fields:
-        - beyond_insight_password_safe.useraudit.AuditID
-      target_field: "_id"    
+  - rename:
+      field: message
+      target_field: beyondtrust_password_safe.useraudit
+      ignore_missing: true
+   
 #################### Event ECS fields ##########################
 
   - set:
@@ -38,18 +36,18 @@ processors:
       field: event.type
       value: beyondtrust_password_safe.useraudit.action_type
   - rename:
-      field: beyond_insight_password_safe.useraudit.audit_id
+      field: beyondtrust_password_safe.useraudit.audit_id
       target_field: event.id
       ignore_missing: true
 
   - rename:
-      field: beyond_insight_password_safe.useraudit.user_id
+      field: beyondtrust_password_safe.useraudit.user_id
       target_field: user.id
       ignore_missing: true
 
   - date:
-      if: "ctx.beyond_insight_password_safe.useraudit?.create_date != null"
-      field: ctx.beyond_insight_password_safe.useraudit.create_date"
+      if: "ctx.beyondtrust_password_safe.useraudit?.create_date != null"
+      field: ctx.beyondtrust_password_safe.useraudit.create_date
       target_field: event.created_at
       formats:
       - UNIX_MS
@@ -58,10 +56,7 @@ processors:
 
 #################### User AuditsLog fields ###############
 
-  - rename:
-      field: message
-      target_field: beyondtrust_password_safe.useraudit
-      ignore_missing: true
+
   - rename:
       field: beyondtrust_password_safe.useraudit.user_name
       target_field: beyondtrust_password_safe.useraudit.user.name
@@ -70,7 +65,6 @@ processors:
       field: beyondtrust_password_safe.useraudit.user_id
       target_field: beyondtrust_password_safe.useraudit.user.id
       ignore_missing: true
-
 ############################### Handle failures #################
 
 on_failure:
@@ -92,17 +86,17 @@ on_failure:
 #   OS src   #
 ##############
   - set:
-      if: "ctx.beyond_insight_password_safe?.useraudit?.event?.os_version != null"
+      if: "ctx.beyondtrust_password_safe?.useraudit?.event?.os_version != null"
       field: os.version
-      copy_from: beyond_insight_password_safe.useraudit.event.os_version
+      copy_from: beyondtrust_password_safe.useraudit.event.os_version
 
 ##############
 #   IP src   #
 ##############
   - set:
-      if: "ctx.beyond_insight_password_safe?.useraudit?.ip_address != null && ctx.beyond_insight_password_safe.useraudit.ip_address != ''"
+      if: "ctx.beyondtrust_password_safe?.useraudit?.ip_address != null && ctx.beyondtrust_password_safe.useraudit.ip_address != ''"
       field: host.ip
-      value: "{{{beyond_insight_password_safe.useraudit.ip_address}}}"
+      value: "{{{beyondtrust_password_safe.useraudit.ip_address}}}"
       ignore_empty_value: true
 
 ##############
@@ -118,4 +112,11 @@ on_failure:
       field: host.ip
       target_field: host.geo
       ignore_missing: true
- 
+   ##############
+  # Fingerprint #
+  ##############
+  - fingerprint:
+      fields: ["event.id", "user.id", "event.created_at"]  
+      target_field: "event.fingerprint" 
+      method: "SHA-256"  
+      ignore_missing: true  
